--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,5 +10,6 @@ dependencies = [
     "gspread-formatting>=1.2.1",
     "ipykernel>=6.29.5",
     "pandas>=2.2.3",
+    "pytest>=8.4.0",
     "python-dotenv>=1.1.0",
 ]
