update env.example variables

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,10 @@
 PAYER_USERS=John,Ryan,Marc
-# LAST_RUN_TIME_TXT=2025-01-01 00:00:00 # has a value or not
+
 GMAIL_EMAIL="user-example@gmail.com"
 GMAIL_APP_PASSWORD="abcd efgh jikl mnop"
-GOOGLE_SHEET_ID="abcdefghi"
-GOOGLE_SHEET_CREDS_PATH="sheet-creds.json"
-STATEMENT_DAY="1"
 
+CARD_USED_FOR_FPND=""
+
+GOOGLE_SHEET_CREDS_PATH="sheet-creds.json"
+
+LAST_RUNTIME_[card_name]=2000-01-01 00:00:00
